
2005-10-07
	* src/course_quad.*
	removed files
	
	* src/*
	several code cleanups and fixes

2005-10-05
	* src/graphicsconfig.*
	added graphics configuration
	terrain detail level
	texture detail level
	player detail level

2005-10-04
	* src/ppogl/ui/scale.*
	added hscale widget (horizontal slider)
	
	* src/audioconfig.*
	replaced enable sound/music checkboxes with volume controls

2005-10-03
	* src/*
	fixed several memleaks
	code cleanups
	
	* src/ppogl/base/error.* src/main.cpp src/gl_utils.cpp
	improved log system
	added commandline options
	
	* src/*
	add log messages to several files
	
	* src/ppogl/audio/audiomgr.* src/main.cpp data/config.nut.in
	added music and sound volume control

2005-09-27
	* data/config.nut.in
	fixed several default settings
	
	* src/ppogl/audio/audiomgr.cpp/h
	check if audiomgr is initialized
	added possibility to disable sound and music
	
	* src/main.cpp
	fixed initialisation of AudioMgr
	
	* src/audioconfig.cpp
	fixed most problems in audioconfig (still needs some work)
	
	* src/paused.cpp
	only continue if configured pause key is pressed
	stop music playback (pausing the music is not implemented yet)
	
	* src/ppogl//audio/sound.cpp
	partially fixed handling of non endless playback

2005-09-26
	* data/translations/de_DE.nut
	fixed translations
	
=== ppracer 0.5 alpha ===

2005-09-25
	* src/videoconfig.cpp
	fixed fullscreen checkbox
	check resolution for min width/height
	check duplication of resolutions 

	* configure.in src/ppracer.h
	changed version to 0.5alpha
	
	* src/main.cpp
	fixed custom data_dir

2005-09-24  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/ui/uimgr.cpp
	fixed handling of mousewheel
		
	* src/screenshot.cpp
	save files in the right directory

2005-09-23  Volker Stroebel <volker@planetpenguin.de>
	* src/phys_sim.cpp/h src/nmrcl.cpp/
	cleanups in physical simulation and ODESolver
	removed unused solver

2005-09-22  Volker Stroebel <volker@planetpenguin.de>
	* src/tux.cpp/h src/keyframe.cpp/h